--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -3,3 +3,15 @@
 @tailwind components;
 @tailwind utilities;
 
+.fade-move,
+.fade-enter-active,
+.fade-leave-active {
+  transition: all 300ms ease-in;
+}
+
+/* 2. declare enter from and leave to state */
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
+  transform: translate(30px, 0);
+}
